testing merge conflict

--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
 <head>
 
     <link rel="stylesheet" type="text/css" href="style.css">
-    <title>Web Author's Top 5 Movie Picks: </title>
+    <title>Top Movie Picks: </title>
 
 </head>
-<h1>Movie List</h1>
+<h1>Top Five Favorite Movies:</h1>
 
 <ul>
     <li>The Outsiders</li>
