added movie route

--- a/index.html
+++ b/index.html
@@ -10,11 +10,14 @@
 <h1>Top Five Favorite Movies:</h1>
 
 <ul>
-    <li>The Outsiders</li>
+
+    <li></li>
+    <!--<li>The Outsiders</li>
     <li>To Kill A Mockingbird</li>
     <li>Hidden Figures</li>
     <li>SW: The Phantom Menace</li>
     <li>The Dark Knight</li>
+    -->
 
 </ul>
 
